# Bell-FP

./: .gitignore  CHANGELOG.md  README.md  bell-fp.cabal  package.yaml  stack.yaml  toybit.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: bell-fp-0.1.0.0-inplace.conf  package.cache  toybit-0.1.0.0-inplace.conf
paper/: cites.bib  main.tex
src/: Config.hs  ProbabilityMonads.hs
src/Bell/: ConcurHV.hs  Config.hs  ContHV.hs  Draft.hs  Empirical.hs  Hidden.hs  LHV.hs  NegativeProb.hs  StateHV.hs  Superdeterminism.hs
src/CHSH/: Classical.hs  Clocked.hs  Contextual.hs  Contextuality.hs  Continuation.hs  DSL.hs  Examples.hs  Experiment.hs  Explore.hs  Identity.hs  LHV.hs  ManyWorlds.hs  NoSignaling.hs  PR.hs  PRState.hs  Quantum.hs  Selection.hs  Shared.hs  Superdet.hs  Util.hs
src/EPR/: Config.hs  Empirical.hs  Hidden.hs  LHV.hs  StateHV.hs
src/Spekken/: Agent.hs  Basis.hs  EpState.hs  Epistemic.hs  MBool.hs  Ontic.hs  Qubit.hs  QubitPair.hs  QubitPairAlt.hs  Query.hs  Utils.hs
test/: Spec.hs  TestQubit.hs
