cabal-version: 3.0

name:           bell-fp
version:        0.1.0.0
build-type:     Simple
license:        BSD-3-Clause
license-file:   LICENSE

extra-source-files:
  README.md

library
  exposed-modules:
      CHSH.Clocked
      CHSH.Contextuality
      CHSH.Explore
      CHSH.Experiment
      CHSH.Identity
      CHSH.LHV
      CHSH.NoSignaling
      CHSH.PR
      CHSH.PRState
      CHSH.Quantum
      CHSH.Shared
      CHSH.Superdet
      CHSH.Util
  other-modules:
      Paths_bell_fp
  autogen-modules:
      Paths_bell_fp
  hs-source-dirs:
      src
  default-extensions:
      GeneralizedNewtypeDeriving
      RankNTypes
      FlexibleInstances
      FlexibleContexts
      DerivingStrategies
  ghc-options: -Wall -Wcompat
  build-depends:
      base >=4.14 && <5
    , mtl
    , random
  default-language: Haskell2010

executable bell-fp
  main-is: Main.hs
  other-modules:
      Paths_bell_fp
  autogen-modules:
      Paths_bell_fp
  hs-source-dirs:
      app
  default-extensions:
      GeneralizedNewtypeDeriving
      RankNTypes
      FlexibleInstances
      FlexibleContexts
      DerivingStrategies
  ghc-options: -Wall -Wcompat
  build-depends:
      base >=4.14 && <5
    , mtl
    , random
    , bell-fp
  default-language: Haskell2010

test-suite bell-fp-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_bell_fp
  autogen-modules:
      Paths_bell_fp
  hs-source-dirs:
      test
  default-extensions:
      GeneralizedNewtypeDeriving
      RankNTypes
      FlexibleInstances
      FlexibleContexts
			DerivingStrategies
  ghc-options: -Wall -Wcompat
  build-depends:
      HUnit
    , base >=4.14 && <5
    , mtl
    , random
    , bell-fp
  default-language: Haskell2010
